--- a/package.json
+++ b/package.json
@@ -19,31 +19,31 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "pino": "^8.17.2",
-    "pino-pretty": "^10.3.1",
-    "katax-core": "^1.2.0",
-    "multer": "^1.4.5-lts.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "bcrypt": "^5.1.1",
-    "pg": "^8.11.3"
+    "katax-core": "^1.4.1",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "pino": "^8.17.2",
+    "pino-pretty": "^10.3.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^22.10.5",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/bcrypt": "^5.0.2",
     "@types/pg": "^8.10.9",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.0",
-    "nodemon": "^3.0.2",
-    "eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
-    "prettier": "^3.2.4"
+    "eslint": "^8.56.0",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.2.4",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
