--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "pino": "^8.17.2",
-    "pino-pretty": "^10.3.1"
+    "pino-pretty": "^10.3.1",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
