--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "katax-core": "^1.4.1",
+    "katax-service-manager": "^0.3.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
+    "redis": "^5.11.0",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
